<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_provider_description">Provider of giveastick to access data</string>
    <string name="app_provider_name">Provider of giveastick</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="group_label">Group</string>
    <string name="group_tag_invalid_field_error">Field Tag is invalid.</string>
    <string name="group_tag_label">Tag</string>
    <string name="group_users_invalid_field_error">Field Users is invalid.</string>
    <string name="group_users_label">Users</string>
    <string name="group_voteforfeits_invalid_field_error">Field VoteForfeits is invalid.</string>
    <string name="group_voteforfeits_label">VoteForfeits</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="stick_empty_list">Stick list is empty !</string>
    <string name="stick_error_create">Stick creation error‚Ä¶</string>
    <string name="stick_error_edit">Stick edition error‚Ä¶</string>
    <string name="stick_error_load">Stick loading error‚Ä¶</string>
    <string name="stick_giver_dialog_title">Select giver</string>
    <string name="stick_giver_invalid_field_error">Field Giver is invalid.</string>
    <string name="stick_giver_label">Giver</string>
    <string name="stick_label">Stick</string>
    <string name="stick_not_found">No Stick found to display‚Ä¶</string>
    <string name="stick_progress_load_message">Stick is loading‚Ä¶</string>
    <string name="stick_progress_load_relations_message">Stick related entities are loading...</string>
    <string name="stick_progress_load_relations_title">Stick related entities loading</string>
    <string name="stick_progress_load_title">Stick Loading progress</string>
    <string name="stick_progress_save_message">Stick is saving to database‚Ä¶</string>
    <string name="stick_progress_save_title">Stick save progress</string>
    <string name="stick_receiver_dialog_title">Select receiver</string>
    <string name="stick_receiver_invalid_field_error">Field Receiver is invalid.</string>
    <string name="stick_receiver_label">Receiver</string>
    <string name="stick_votesticks_dialog_title">Select voteSticks</string>
    <string name="stick_votesticks_invalid_field_error">Field VoteSticks is invalid.</string>
    <string name="stick_votesticks_label">VoteSticks</string>
    <string name="uri_not_supported">URI not supported</string>
    <string name="user_email_invalid_field_error">Field Email is invalid.</string>
    <string name="user_email_label">Email</string>
    <string name="user_empty_list">User list is empty !</string>
    <string name="user_error_create">User creation error‚Ä¶</string>
    <string name="user_error_edit">User edition error‚Ä¶</string>
    <string name="user_error_load">User loading error‚Ä¶</string>
    <string name="user_givensticks_dialog_title">Select givenSticks</string>
    <string name="user_givensticks_invalid_field_error">Field GivenSticks is invalid.</string>
    <string name="user_givensticks_label">GivenSticks</string>
    <string name="user_group_dialog_title">Select group</string>
    <string name="user_group_invalid_field_error">Field Group is invalid.</string>
    <string name="user_group_label">Group</string>
    <string name="user_label">User</string>
    <string name="user_nickname_invalid_field_error">Field Nickname is invalid.</string>
    <string name="user_nickname_label">Nickname</string>
    <string name="user_not_found">No User found to display‚Ä¶</string>
    <string name="user_password_invalid_field_error">Field Password is invalid.</string>
    <string name="user_password_label">Password</string>
    <string name="user_progress_load_message">User is loading‚Ä¶</string>
    <string name="user_progress_load_relations_message">User related entities are loading...</string>
    <string name="user_progress_load_relations_title">User related entities loading</string>
    <string name="user_progress_load_title">User Loading progress</string>
    <string name="user_progress_save_message">User is saving to database‚Ä¶</string>
    <string name="user_progress_save_title">User save progress</string>
    <string name="user_receivedsticks_dialog_title">Select receivedSticks</string>
    <string name="user_receivedsticks_invalid_field_error">Field ReceivedSticks is invalid.</string>
    <string name="user_receivedsticks_label">ReceivedSticks</string>
    <string name="user_usergroup_dialog_title">Select userGroup</string>
    <string name="user_usergroup_invalid_field_error">Field UserGroup is invalid.</string>
    <string name="user_usergroup_label">UserGroup</string>
    <string name="user_votesticks_dialog_title">Select voteSticks</string>
    <string name="user_votesticks_invalid_field_error">Field VoteSticks is invalid.</string>
    <string name="user_votesticks_label">VoteSticks</string>
    <string name="usergroup_empty_list">UserGroup list is empty !</string>
    <string name="usergroup_error_create">UserGroup creation error‚Ä¶</string>
    <string name="usergroup_error_edit">UserGroup edition error‚Ä¶</string>
    <string name="usergroup_error_load">UserGroup loading error‚Ä¶</string>
    <string name="usergroup_label">UserGroup</string>
    <string name="usergroup_not_found">No UserGroup found to display‚Ä¶</string>
    <string name="usergroup_progress_load_message">UserGroup is loading‚Ä¶</string>
    <string name="usergroup_progress_load_relations_message">UserGroup related entities are loading...</string>
    <string name="usergroup_progress_load_relations_title">UserGroup related entities loading</string>
    <string name="usergroup_progress_load_title">UserGroup Loading progress</string>
    <string name="usergroup_progress_save_message">UserGroup is saving to database‚Ä¶</string>
    <string name="usergroup_progress_save_title">UserGroup save progress</string>
    <string name="usergroup_tag_invalid_field_error">Field Tag is invalid.</string>
    <string name="usergroup_tag_label">Tag</string>
    <string name="usergroup_users_dialog_title">Select users</string>
    <string name="usergroup_users_invalid_field_error">Field Users is invalid.</string>
    <string name="usergroup_users_label">Users</string>
    <string name="usergroup_voteforfeits_dialog_title">Select voteForfeits</string>
    <string name="usergroup_voteforfeits_invalid_field_error">Field VoteForfeits is invalid.</string>
    <string name="usergroup_voteforfeits_label">VoteForfeits</string>
    <string name="voteforfeit_empty_list">VoteForfeit list is empty !</string>
    <string name="voteforfeit_error_create">VoteForfeit creation error‚Ä¶</string>
    <string name="voteforfeit_error_edit">VoteForfeit edition error‚Ä¶</string>
    <string name="voteforfeit_error_load">VoteForfeit loading error‚Ä¶</string>
    <string name="voteforfeit_group_invalid_field_error">Field Group is invalid.</string>
    <string name="voteforfeit_group_label">Group</string>
    <string name="voteforfeit_label">VoteForfeit</string>
    <string name="voteforfeit_not_found">No VoteForfeit found to display‚Ä¶</string>
    <string name="voteforfeit_progress_load_message">VoteForfeit is loading‚Ä¶</string>
    <string name="voteforfeit_progress_load_relations_message">VoteForfeit related entities are loading...</string>
    <string name="voteforfeit_progress_load_relations_title">VoteForfeit related entities loading</string>
    <string name="voteforfeit_progress_load_title">VoteForfeit Loading progress</string>
    <string name="voteforfeit_progress_save_message">VoteForfeit is saving to database‚Ä¶</string>
    <string name="voteforfeit_progress_save_title">VoteForfeit save progress</string>
    <string name="voteforfeit_usergroup_dialog_title">Select userGroup</string>
    <string name="voteforfeit_usergroup_invalid_field_error">Field UserGroup is invalid.</string>
    <string name="voteforfeit_usergroup_label">UserGroup</string>
    <string name="votestick_answer_invalid_field_error">Field Answer is invalid.</string>
    <string name="votestick_answer_label">Answer</string>
    <string name="votestick_empty_list">VoteStick list is empty !</string>
    <string name="votestick_error_create">VoteStick creation error‚Ä¶</string>
    <string name="votestick_error_edit">VoteStick edition error‚Ä¶</string>
    <string name="votestick_error_load">VoteStick loading error‚Ä¶</string>
    <string name="votestick_label">VoteStick</string>
    <string name="votestick_not_found">No VoteStick found to display‚Ä¶</string>
    <string name="votestick_progress_load_message">VoteStick is loading‚Ä¶</string>
    <string name="votestick_progress_load_relations_message">VoteStick related entities are loading...</string>
    <string name="votestick_progress_load_relations_title">VoteStick related entities loading</string>
    <string name="votestick_progress_load_title">VoteStick Loading progress</string>
    <string name="votestick_progress_save_message">VoteStick is saving to database‚Ä¶</string>
    <string name="votestick_progress_save_title">VoteStick save progress</string>
    <string name="votestick_stick_dialog_title">Select stick</string>
    <string name="votestick_stick_invalid_field_error">Field Stick is invalid.</string>
    <string name="votestick_stick_label">Stick</string>
    <string name="votestick_user_dialog_title">Select user</string>
    <string name="votestick_user_invalid_field_error">Field User is invalid.</string>
    <string name="votestick_user_label">User</string>
    <string name="app_name">Give A Stick</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- General -->
    <string name="connectionError">Une erreur de connexion est survenue, merci de réessayer plus tard</string>

    <!-- LoginActivity -->
    <string name="userName">Email&#8230;</string>
    <string name="password">Mot de passe&#8230;</string>
    <string name="passwordConfirm">Confirmation du mot de passe&#8230;</string>
    <string name="login">Connexion</string>
    <string name="register"><u>Inscription</u></string>
    <string name="false_login">Identifiants incorrects (login:demo@giveastick.com, password: good)</string>
    <string name="login_empty">Entrez un identifiant et un mot de passe. </string>

    <!-- RegisterActivity -->
    <string name="register_activity">Inscription</string>
    <string name="nick">Pseudo&#8230;</string>
    <string name="confirmation">Confirmation</string>
    <string name="groupTag">Group tag</string>
    <string name="validation">Validation</string>

    <!-- AboutActivity -->
    <string name="about_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi convallis venenatis odio sit amet lacinia. Pellentesque lacinia elit quam. Nullam sollicitudin ornare purus, in vehicula quam eleifend nec. Maecenas nec rhoncus augue, sit amet tristique justo. Fusce eu interdum lorem. Maecenas mattis turpis eu vehicula sodales.</string>
    <string name="about_title">A propos</string>
    <string name="return_home">Retour</string>

    <!-- ListActivity -->
    <string name="title_activity_list">ListActivity</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_about">À propos</string>
    <string name="sticklist_give_vote_dialog_click_ok">Ton vote à bien été envoyé !</string>
    <string name="your_pledge">Ton gage !</string>

</resources>
