<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:harmony="http://schemas.android.com/apk/res/com.iia.giveastick"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
    	android:id="@+id/user_email_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/user_email_label"/>
    <EditText
		android:id="@+id/user_email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
		android:layout_below="@+id/user_email_label" />
    <TextView
    	android:id="@+id/user_password_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_email"
	    android:text="@string/user_password_label"/>
    <EditText
		android:id="@+id/user_password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textPassword"
		android:layout_below="@+id/user_password_label" />
    <TextView
    	android:id="@+id/user_nickname_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_password"
	    android:text="@string/user_nickname_label"/>
    <EditText
		android:id="@+id/user_nickname"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
		android:layout_below="@+id/user_nickname_label" />
    <TextView
    	android:id="@+id/user_usergroup_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_nickname"
	    android:text="@string/user_usergroup_label"/>
    <com.iia.giveastick.harmony.widget.SingleEntityWidget
        android:id="@+id/user_usergroup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/user_usergroup_label" />
    <TextView
    	android:id="@+id/user_votesticks_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_usergroup_button"
	    android:text="@string/user_votesticks_label"/>
    <com.iia.giveastick.harmony.widget.MultiEntityWidget
        android:id="@+id/user_votesticks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/user_votesticks_label" />
    <TextView
    	android:id="@+id/user_givensticks_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_votesticks_button"
	    android:text="@string/user_givensticks_label"/>
    <com.iia.giveastick.harmony.widget.MultiEntityWidget
        android:id="@+id/user_givensticks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/user_givensticks_label" />
    <TextView
    	android:id="@+id/user_receivedsticks_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/user_givensticks_button"
	    android:text="@string/user_receivedsticks_label"/>
    <com.iia.giveastick.harmony.widget.MultiEntityWidget
        android:id="@+id/user_receivedsticks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/user_receivedsticks_label" />
</RelativeLayout>
