<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".HomeActivity" >

	  	
	   <EditText
	        android:id="@+id/userName"
	        android:inputType="textEmailAddress"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="76dp"
	        android:ems="10"
	        android:text="demo@giveastick.com"
	        android:hint="@string/userName" />
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/userName"
	        android:layout_below="@+id/userName"
	        android:layout_marginTop="30dp"
	        android:ems="10"
	        android:inputType="textPassword"
	        android:text="good"
	        android:hint="@string/password" />
	
	    <Button
	        android:id="@+id/login"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/password"
	        android:layout_below="@+id/password"
	        android:layout_marginTop="40dp"
	        android:text="@string/login" />
	
	    <TextView
	        android:id="@+id/register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="47dp"
	        android:layout_below="@+id/login"
	        android:layout_marginTop="40dp"
	        android:text="@string/register"
	        android:textSize="15sp"
	        android:onClick="onClick"                
	        android:clickable="true" />
	</RelativeLayout>
</ScrollView>
